data/derived/comb/progs/unify/prog0682.ml.out
Characters 102-103:
  let num = sumList n in
                    ^
Error: This expression has type int but an expression was expected of type
         int list
